nginx-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cbtw-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myguest.virtualbox.org
      secretName: tls-myguest.virtualbox.org
  rules:
    - host: myguest.virtualbox.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo-service
                port:
                  number: 80
